Fix inspiring_messages, bookmarks scrollbar hover color, clean a bit

--- a/css/bookmarks.css
+++ b/css/bookmarks.css
@@ -1,61 +1,62 @@
 #bookmark_container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 50%;
-    margin: 1em 0em;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 50%;
+  margin: 1em 0em;
 }
 
 .bookmark-set {
-    padding: 1em;
-    background-color: var(--containerBg);
-    border-radius: 3px;
-    font-family: var(--fontFamily);
-    font-size: 0.85rem;
-    width: 25%;
-    height: 12em;
-    margin: 0em 0.5em;
-    box-sizing: border-box;
+  padding: 1em;
+  background-color: var(--containerBg);
+  border-radius: 3px;
+  font-family: var(--fontFamily);
+  font-size: 0.85rem;
+  width: 25%;
+  height: 12em;
+  margin: 0em 0.5em;
+  box-sizing: border-box;
 }
   
-  .bookmark-inner-container {
-    overflow-y: scroll;
-    height: 80%;
-    vertical-align: top;
-    padding-right: 6px;
-    box-sizing: border-box;
-  
-    scrollbar-width: thin;
-    scrollbar-color: var(--scrollbarColor);
+.bookmark-inner-container {
+  overflow-y: scroll;
+  height: 80%;
+  vertical-align: top;
+  padding-right: 6px;
+  box-sizing: border-box;
 }
 
 .bookmark-inner-container::-webkit-scrollbar {
-    width: 6px;
-  }
-  .bookmark-inner-container::-webkit-scrollbar-track {
-    background: #ffffff00;
-  }
-  .bookmark-inner-container::-webkit-scrollbar-thumb {
-    background-color: var(--scrollbarColor);
-    border-radius: 6px;
-    border: 3px solid #ffffff00;
-  }
-  
-  .bookmark-title {
-    font-size: 1.1rem;
-    font-weight: 600;
-    color: var(--fg);
-    margin: 0em 0em 0.35em 0em;
-  }
-  
-  .bookmark {
-    text-decoration: none;
-    color: var(--secondaryFg);
-    display: block;
-    margin: 0.5em 0em;
-    transition: color 100ms ease-in-out;
-  }
-  .bookmark:hover {
-    color: var(--fg);
-    transition: color 100ms ease-in-out;
-  }
+  width: 6px;
+}
+.bookmark-inner-container::-webkit-scrollbar-track {
+  background: #ffffff00;
+}
+.bookmark-inner-container::-webkit-scrollbar-thumb {
+  background-color: var(--scrollbarColor);
+  border-radius: 6px;
+  border: 3px solid #ffffff00;
+}
+.bookmark-inner-container:hover::-webkit-scrollbar-thumb{
+  background-color: var(--scrollbarHoverColor);
+  transition: background-color 100ms ease-in-out;
+}
+
+.bookmark-title {
+  font-size: 1.1rem;
+  font-weight: 600;
+  color: var(--fg);
+  margin: 0em 0em 0.35em 0em;
+}
+
+.bookmark {
+  text-decoration: none;
+  color: var(--secondaryFg);
+  display: block;
+  margin: 0.5em 0em;
+  transition: color 100ms ease-in-out;
+}
+.bookmark:hover {
+  color: var(--fg);
+  transition: color 100ms ease-in-out;
+}
